Fix horizontal scroll (this time actually horizontal, not vertical)

--- a/exhibition/django_jigsaw_puzzle/static/django_jigsaw_puzzle/css/paint_game.css
+++ b/exhibition/django_jigsaw_puzzle/static/django_jigsaw_puzzle/css/paint_game.css
@@ -7,7 +7,8 @@ canvas {
     position: absolute;
     background: rgba(255, 255, 255, 0);
     pointer-events: none; z-index: 1;
-    margin: 4px;
+    padding: 4px;
+    margin: 0;
     display: grid;
     gap: 3px;
 }
@@ -21,7 +22,7 @@ canvas {
     bottom: 0;
     left: 0;
     max-width: 100%;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .gizmos > input, .gizmos > button {
@@ -36,8 +37,8 @@ canvas {
 
     margin: 0;
     padding: 0;
-    width: 48px;
-    height: 48px;
+    width: 46px;
+    height: 46px;
 
     border: 1px solid gray !important;
     border-radius: 3px;
